Fix whitespace preservation in status text

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -90,6 +90,7 @@
   word-wrap: break-word;
   font-weight: 300;
   overflow: hidden;
+  white-space: pre-wrap;
 
   .emojione {
     width: 18px;
