--- a/app/assets/stylesheets/stream_entries.scss
+++ b/app/assets/stylesheets/stream_entries.scss
@@ -153,6 +153,7 @@
     color: #282c37;
     word-wrap: break-word;
     overflow: hidden;
+    white-space: pre-wrap;
 
     p {
       margin-bottom: 18px;
